tests/baselines/reference/unusedMultipleParameter2InContructor.errors.txt
unusedMultipleParameter2InContructor.ts(2,17): error TS6133: 'person' is declared but its value is never read.
unusedMultipleParameter2InContructor.ts(2,33): error TS6133: 'person2' is declared but its value is never read.
unusedMultipleParameter2InContructor.ts(2,50): error TS6133: 'person3' is declared but its value is never read.
unusedMultipleParameter2InContructor.ts(3,13): error TS6133: 'unused' is declared but its value is never read.


==== unusedMultipleParameter2InContructor.ts (4 errors) ====
    class Dummy {
        constructor(person: string, person2: string, person3: string) {
                    ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
                                    ~~~~~~~
!!! error TS6133: 'person2' is declared but its value is never read.
                                                     ~~~~~~~
!!! error TS6133: 'person3' is declared but its value is never read.
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
            person2 = "Dummy value";
        }
    }